yaml/cliente-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-client
  namespace: project
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: "3000"
  selector:
    app: grpc-client
