yaml/dummy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dummy-root
  name: dummy-root
  namespace: project
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
  selector:
    app: dummy-root
