yaml/redis-pub-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-pub
  namespace: project
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: "30002"
  selector:
    app: redis-pub
