yaml/servidor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-server
  namespace: project
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      name: http
  selector:
    app: grpc-server
