yaml/ingress-redis.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
    ingress.kubernetes.io/rewrite-target: /
  name: green-ingress
  namespace: project
spec:
  rules:
    - host: green.sopes1-diciembre.tk
      http:
        paths:
          - backend:
              serviceName: redis-pub
              servicePort: 3000
